--- a/style/style.css
+++ b/style/style.css
@@ -40,193 +40,39 @@ h3 { color: #35A1A2;}
 	display: inline;
 }
 
-.demo{
-                width:580px;
-                padding:10px;
-                margin:10px auto;
-                border: 1px solid #fff;
-                background-color:#f7f7f7;
-            }
- .content{
-                margin-top:100px;
-                padding:0px;
-                bottom:0px;
-            }
-
-
-.jPaginate{
-    height:34px;
-    position:relative;
-    color:#a5a5a5;
-    font-size:small;   
-	width:100%;
-}
-.jPaginate a{
-    line-height:15px;
-    height:18px;
-    cursor:pointer;
-    padding:2px 5px;
-    margin:2px;
-    float:left;
-}
-.jPag-control-back{
-	position:absolute;
-	left:0px;
-}
-.jPag-control-front{
-	position:absolute;
-	top:0px;
-}
-.jPaginate span{
-    cursor:pointer;
-}
-ul.jPag-pages{
-    float:left;
-    list-style-type:none;
-    margin:0px 0px 0px 0px;
-    padding:0px;
-}
-ul.jPag-pages li{
-    display:inline;
-    float:left;
-    padding:0px;
-    margin:0px;
-}
-ul.jPag-pages li a{
-    float:left;
-    padding:2px 5px;
-}
-span.jPag-current{
-    cursor:default;
-    font-weight:normal;
-    line-height:15px;
-    height:18px;
-    padding:2px 5px;
-    margin:2px;
-    float:left;
-}
-ul.jPag-pages li span.jPag-previous,
-ul.jPag-pages li span.jPag-next,
-span.jPag-sprevious,
-span.jPag-snext,
-ul.jPag-pages li span.jPag-previous-img,
-ul.jPag-pages li span.jPag-next-img,
-span.jPag-sprevious-img,
-span.jPag-snext-img{
-    height:22px;
-    margin:2px;
-    float:left;
-    line-height:18px;
+.input {
+border-width: 1px;
+border-style: solid;
+border-color: #399098;
+background-image: url(images/sd.png);
+background-repeat: no-repeat;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 12px;
+color: #333333;
+width: 200px;
+height: 20px;
 }
 
-ul.jPag-pages li span.jPag-previous,
-ul.jPag-pages li span.jPag-previous-img{
-    margin:2px 0px 2px 2px;
-    font-size:12px;
-    font-weight:bold;
-        width:10px;
-
+table.sample {
+	border-width: 1px 1px 1px 1px;
+	border-spacing: 2px;
+	border-style: solid solid solid solid;
+	border-color: black black black black;
+	border-collapse: collapse;
+	background-color: white;
+        padding: 20px 20px 20px 20px;
 }
-ul.jPag-pages li span.jPag-next,
-ul.jPag-pages li span.jPag-next-img{
-    margin:2px 2px 2px 0px;
-    font-size:12px;
-    font-weight:bold;
-    width:10px;
+table.sample th {
+	border-width: 1px 1px 1px 1px;
+        padding: 5px 5px 5px 5px;
+	border-style: solid solid solid solid;
+	border-color: ;
+	background-color: #A9CFE8;
 }
-span.jPag-sprevious,
-span.jPag-sprevious-img{
-    margin:2px 0px 2px 2px;
-    font-size:18px;
-    width:15px;
-    text-align:right;
+table.sample td {
+	border-width: 1px 1px 1px 1px;
+	padding: 5px 5px 5px 5px;
+	border-style: solid solid solid solid;
+	border-color: #000;
+	background-color: rgb(255, 250, 250);
 }
-span.jPag-snext,
-span.jPag-snext-img{
-    margin:2px 2px 2px 0px;
-    font-size:18px;
-    width:15px;
-     text-align:right;
-}
-ul.jPag-pages li span.jPag-previous-img{
-    background:transparent url(images/previous.png) no-repeat center right;
-            }
-ul.jPag-pages li span.jPag-next-img{
-    background:transparent url(images/next.png) no-repeat center left;
-            }
-span.jPag-sprevious-img{
-    background:transparent url(images/sprevious.png) no-repeat center right;
-            }
-span.jPag-snext-img{
-    background:transparent url(images/snext.png) no-repeat center left;
-            }
- .header{
-                position:absolute;
-                top:0px;
-                left:0px;
-                width:100%;
-                height:80px;            
-            }
-            .header h1{
-                color:#fff;
-                font-size: 38px;
-                margin:0px 0px 0px 30px;
-                font-weight:100;
-                line-height:80px;
-                padding:0px;
-            }
-            .footer{
-                width:100%;
-                margin:10px 0px 5px 0px;
-            }
-            a img{
-                border:none;
-                outline:none;
-            }
-            .content{
-                margin-top:100px;
-                padding:0px;
-                bottom:0px;
-            }
-            .about{
-                width:100%;
-                height:400px;
-                background:transparent url(about.png) repeat-x top left;
-                border-top:2px solid #ccc;
-                border-bottom:2px solid #000;
-            }
-            .about .text{
-                width:16%;
-                margin:5px 2% 10px 2%;
-                height:380px;
-                float:left;
-                color:#FCFEF3;
-                font-size: 16px;
-                text-align:justify;
-                letter-spacing:0px;
-            }
-            .about .text h1{
-                border-bottom: 1px dashed #ccc;
-                color:#fff;
-            }
-            .demo{
-                width:580px;
-                padding:10px;
-                margin:10px auto;
-                border: 1px solid #fff;
-                background-color:#f7f7f7;
-            }
-            h1{
-                color:#404347;
-                margin:5px 30px 20px 0px;
-                font-weight:100;
-            }
-			.pagedemo{
-				border: 1px solid #CCC;
-				width:310px;
-				margin:2px;
-                padding:50px 10px;
-                text-align:center;
-				background-color:white;	
-			}
-
