--- a/style/style.css
+++ b/style/style.css
@@ -41,15 +41,18 @@ h3 { color: #35A1A2;}
 }
 
 .input {
+padding: 0.4em 1em 0.4em 1em;
 border-width: 1px;
 border-style: solid;
 border-color: #399098;
 background-image: url(images/sd.png);
 background-repeat: no-repeat;
+-moz-border-radius: 10px;
+border-radius: 10px;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 12px;
 color: #333333;
-width: 200px;
+width: 175px;
 height: 20px;
 }
 
@@ -66,6 +69,7 @@ border-radius: 50px;
 width: 200px;
 height: 30px;
 }
+
 
 table.sample {
 	border-width: 1px 1px 1px 1px;
@@ -90,3 +94,7 @@ table.sample td {
 	border-color: #000;
 	background-color: rgb(255, 250, 250);
 }
+
+span.customStyleSelectBox { font-size:11px; background-color: #d9ecf9; color:#2779aa; padding:5px 7px; border:1px solid #2779aa; -moz-border-radius: 10px; -webkit-border-radius: 10px;border-radius: 10px 10px; }
+span.customStyleSelectBox.changed { background-color: #2779aa; color:#fff;}
+.customStyleSelectBoxInner { background:url(canvas-list-nav-item-arrow-.gif) no-repeat center right; }
